wip:
* /categories: ok
* /categories/{id}: ok
* /comments: write doc
